# 18g-OnlineCOMEstimation

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.hpp  Main.cpp  MyWindow.cpp  MyWindow.hpp  README.md  balancedPoses.txt  balancedPosesmunzirdart.txt  controlParams.cfg  defaultInit.txt  defaultInitdart.txt  gen_phi_matrix.cpp  gen_phi_matrix.hpp  lqr.cpp  lqr.hpp  reorientedbalancedPoses.txt
lqrOctave/: lqr.cpp  old_lqr.cpp
lqrTest/: CMakeLists.txt  lqr.cpp
lqrWrapper/: CMakeLists.txt  lqr  lqr.cpp  lqr.hpp  lqr_old.cpp
